# decant

./: .editorconfig  .gitignore  .gitleaks.toml  .rustfmt.toml  .taplo.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  deny.toml  install.sh  justfile  lefthook.yml  release.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/decant-agents/: Cargo.toml  README.md
crates/decant-agents/src/: agent.rs  install.rs  lib.rs  registry.rs  rewrite.rs
crates/decant-agents/src/agents/: claude.rs
crates/decant-core/: Cargo.toml  README.md
crates/decant-core/src/: capture.rs  error.rs  lib.rs  pipeline.rs  progress.rs  runner.rs  transform.rs  types.rs
crates/decant-dashboard/: Cargo.toml  README.md
crates/decant-dashboard/src/: lib.rs
crates/decant-metrics/: Cargo.toml  README.md
crates/decant-metrics/src/: lib.rs
crates/decant-store/: Cargo.toml  README.md
crates/decant-store/src/: lib.rs
crates/decant-transforms/: Cargo.toml  README.md
crates/decant-transforms/src/: chain.rs  config.rs  lib.rs  router.rs  rule.rs
crates/decant-transforms/src/builtins/: cargo-build.toml  cargo-nextest.toml  cargo-test.toml  du.toml  find.toml  git-diff.toml  git-log.toml  git-status.toml  ls.toml  make.toml  rsync.toml  terraform-apply.toml  terraform-init.toml  terraform-plan.toml
crates/decant-transforms/src/rules/: collapse.rs  cut.rs  dedup.rs  drop.rs  keep.rs  keep_after.rs  mod.rs  rank.rs  strip_ansi.rs  transform.rs  truncate.rs
crates/decant-transforms/tests/: builtins.rs  live.rs
crates/decant-transforms/tests/fixtures/: cargo-build-fail.txt  cargo-build.txt  cargo-nextest-fail.txt  cargo-nextest.txt  cargo-test-fail.txt  cargo-test.txt  du.txt  find.txt  git-diff.txt  git-log.txt  git-status.txt  ls.txt  make-fail.txt  make.txt  rsync.txt  terraform-apply.txt  terraform-init.txt  terraform-plan.txt
crates/decant-transforms/tests/snapshots/: builtins__cargo_build.snap  builtins__cargo_build_fail.snap  builtins__cargo_nextest.snap  builtins__cargo_nextest_fail.snap  builtins__cargo_test.snap  builtins__cargo_test_fail.snap  builtins__du.snap  builtins__find.snap  builtins__git_diff.snap  builtins__git_log.snap  builtins__git_status.snap  builtins__ls.snap  builtins__make.snap  builtins__make_fail.snap  builtins__rsync.snap  builtins__terraform_apply.snap  builtins__terraform_init.snap  builtins__terraform_plan.snap
tools/decant/: Cargo.toml  README.md  build.rs
tools/decant/src/: cli.rs  hook.rs  lib.rs  main.rs  run.rs  update.rs
tools/decant/src/cmd/: dashboard.rs  explain.rs  history.rs  hook.rs  init.rs  run.rs  update.rs
tools/decant/tests/: cli.rs
