[workspace]
members  = ["crates/*", "tools/*"]
resolver = "3"

[workspace.package]
authors    = ["DavidB <berbsd@gmail.com>"]
edition    = "2024"
license    = "MIT"
publish    = false
repository = "https://github.com/berbsd/decant"
version    = "0.1.7"

# =============================================================================
# Lint Configuration
# =============================================================================
# These lints apply to all crates that specify `[lints] workspace = true`
#
# Lint levels: "allow" < "warn" < "deny" < "forbid"
# Priority: Higher priority = applied later (overrides lower priority)
#
# To allow a lint in a specific crate, add to that crate's Cargo.toml:
#   [lints.clippy]
#   lint_name = "allow"
# =============================================================================

[workspace.lints.rust]
# Safety & Correctness
missing_unsafe_on_extern = "deny"
unsafe_code              = "warn"
unsafe_op_in_unsafe_fn   = "deny"

# Code Quality
dead_code = "warn"

# missing_docs         = "warn"
unreachable_patterns = "deny"
unused_imports       = "warn"
unused_must_use      = "deny"
unused_variables     = "warn"

# Performance
trivial_casts         = "warn"
trivial_numeric_casts = "warn"

# API Quality
unnameable_types = "warn"

# Bug Prevention
unit_bindings = "warn"

double_negations     = "warn"
let_underscore_drop  = "warn"
single_use_lifetimes = "warn"
unreachable_pub      = "warn" # forces honest pub vs pub(crate)
unused_lifetimes     = "warn"
unused_macro_rules   = "warn"

[workspace.lints.clippy]
# Baseline
all        = { level = "deny", priority = 1 }
complexity = { level = "warn", priority = 2 }
pedantic   = { level = "warn", priority = 2 }
style      = { level = "warn", priority = 2 }

# Allow workspace metadata warnings
cargo_common_metadata = { level = "allow", priority = 3 }

# === Critical Safety (No Panics) ===
expect_used   = "deny"
panic         = "deny"
todo          = "deny"
unimplemented = "deny"
unreachable   = "deny"
unwrap_used   = "deny"

# === Correctness ===
absurd_extreme_comparisons = "deny"
almost_swapped             = "deny"
bad_bit_mask               = "deny"
cast_slice_different_sizes = "deny"
char_lit_as_u8             = "deny"

# === Async Safety (CRITICAL) ===
async_yields_async        = "warn"
await_holding_lock        = "deny"
await_holding_refcell_ref = "deny"

# === Async / concurrency
mutex_atomic                  = "warn"
mutex_integer                 = "warn"
rc_buffer                     = "warn"
rc_mutex                      = "warn" # nearly always wrong (want Arc<Mutex>)
significant_drop_in_scrutinee = "warn"
significant_drop_tightening   = "warn" # holding MutexGuard across await

# === Suspicious Patterns ===
arc_with_non_send_sync = "warn"
cast_abs_to_unsigned   = "warn"
cast_nan_to_int        = "warn"
float_cmp              = "warn"

# === Performance ===
box_collection                    = "warn"
bytes_count_to_len                = "warn"
clone_on_copy                     = "warn"
cmp_owned                         = "warn"
inefficient_to_string             = "warn"
items_after_statements            = "warn"
large_stack_arrays                = "warn"
large_types_passed_by_value       = "warn"
manual_memcpy                     = "warn"
needless_borrows_for_generic_args = "warn"
needless_collect                  = "warn"
needless_pass_by_value            = "warn"
or_fun_call                       = "warn"
redundant_clone                   = "warn"
stable_sort_primitive             = "warn"
trivially_copy_pass_by_ref        = "warn"
unnecessary_to_owned              = "warn" # natural complement to redundant_clone
unnecessary_wraps                 = "warn"
useless_conversion                = "warn"

# === Path / Import Style ===
# Reinforce CLAUDE.md → Path Conventions. These lints already fire via the
# pedantic/style groups; listing them explicitly pins them as load-bearing
# for the path-convention contract (see `22-path-conventions.md`).
enum_glob_use                 = "warn" # forbid `use MyEnum::*;` (pedantic)
semicolon_if_nothing_returned = "warn" # statement hygiene (pedantic)
single_component_path_imports = "warn" # forbid `use foo;` for a sibling (style)
unnecessary_self_imports      = "warn" # forbid `use foo::{self};` (pedantic)
wildcard_imports              = "warn" # forbid `use foo::*;` (pedantic)

# === String/Format ===
format_in_format_args    = "warn"
to_string_in_format_args = "warn"

# === Error Handling ===
map_err_ignore   = "warn"
result_large_err = "warn"

# === Iterator/loop mistakes
debug_assert_with_mut_call = "warn"
iter_over_hash_type        = "warn" # non-determinism source
mem_forget                 = "deny" # almost always a bug
mem_replace_with_default   = "warn"

# === Comparison/logic bugs
bool_comparison                = "warn"
nonminimal_bool                = "warn"
suspicious_operation_groupings = "warn"

# === Lifetime / borrow footguns
imprecise_flops     = "warn"
lossy_float_literal = "warn"
suboptimal_flops    = "warn"

# === API / Hygiene
dbg_macro                         = "deny"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets       = "warn"
exit                              = "deny" # only `main` should exit
let_underscore_future             = "deny" # silently dropping a Future = bug
let_underscore_must_use           = "warn"
print_stderr                      = "warn"
print_stdout                      = "warn" # forces tracing
return_self_not_must_use          = "warn"

# === Integer Safety ===
cast_possible_truncation = "warn"
cast_possible_wrap       = "warn"
cast_precision_loss      = "warn"
cast_sign_loss           = "warn"

# === Documentation ===
# missing_errors_doc            = "ignore"
# missing_panics_doc = "warn"
# missing_safety_doc            = "warn"
# missing_docs_in_private_items = "warn"

# === Pragmatic Allows ===
collapsible_if            = { level = "allow", priority = 3 }
duration_suboptimal_units = { level = "allow", priority = 3 }
ignore_without_reason     = { level = "allow", priority = 3 }
missing_errors_doc        = { level = "allow", priority = 3 }
module_name_repetitions   = { level = "allow", priority = 3 }
must_use_candidate        = { level = "allow", priority = 3 }
similar_names             = { level = "allow", priority = 3 }
single_match_else         = { level = "allow", priority = 3 }
struct_field_names        = { level = "allow", priority = 3 }
too_many_arguments        = { level = "allow", priority = 3 }
too_many_lines            = { level = "allow", priority = 3 }
uninlined_format_args     = { level = "allow", priority = 3 }

[workspace.dependencies]
# Runtime
anyhow      = "1.0.100"
clap        = { version = "4.6.1", features = ["derive"] }
include_dir = "0.7"
regex       = "1.11"
rusqlite    = { version = "0.31", features = ["bundled"] }
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.150"
sha2        = "0.10"
thiserror   = "2.0.18"
toml        = "1.1.2"
ureq        = "2"
nix         = { version = "0.31.3", features = ["signal"] }

# Dev / testing
insta    = "1.48.0"
mockito  = "1"
tempfile = "3"
