[package]
name              = "decant-agents"
description       = "Agent hook integration for decant (install + rewrite + per-agent I/O)"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme            = "README.md"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow     = { workspace = true }
regex      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
