[package]
authors.workspace    = true
description          = "Agent hook integration for decant (install + rewrite + per-agent I/O)"
edition.workspace    = true
license.workspace    = true
name                 = "decant-agents"
publish.workspace    = true
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
regex      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
