[package]
authors.workspace    = true
description          = "SQLite persistence of decant run metrics"
edition.workspace    = true
license.workspace    = true
name                 = "decant-store"
publish.workspace    = true
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
decant-metrics = { path = "../decant-metrics" }

rusqlite  = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
