[package]
authors.workspace    = true
description          = "Built-in decant transforms"
edition.workspace    = true
license.workspace    = true
name                 = "decant-transforms"
publish.workspace    = true
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
decant-core = { path = "../decant-core" }
include_dir = { workspace = true }
regex       = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
thiserror   = { workspace = true }
toml        = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
tempfile = { workspace = true }
