[package]
authors.workspace    = true
description          = "CLI that reduces a command's output to save LLM tokens"
edition.workspace    = true
license.workspace    = true
name                 = "decant"
publish.workspace    = true
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[[bin]]
name = "decant"
path = "src/main.rs"

[dependencies]
decant-agents     = { path = "../../crates/decant-agents" }
decant-core       = { path = "../../crates/decant-core" }
decant-metrics    = { path = "../../crates/decant-metrics" }
decant-store      = { path = "../../crates/decant-store" }
decant-transforms = { path = "../../crates/decant-transforms" }

anyhow     = { workspace = true }
clap       = { workspace = true, features = ["derive"] }
indicatif  = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
ureq       = { workspace = true }

[dev-dependencies]
mockito  = { workspace = true }
tempfile = { workspace = true }
